Concepts 前端工程化

--- a/Concepts/前端工程化.md
+++ b/Concepts/前端工程化.md
@@ -15,3 +15,51 @@
     2. 使用浏览器的`<script type="module">`进行加载
 
 * CSS的模块化
+    虽然`Sass`,`Less`等预处理器实现了CSS的文件拆分，但是没有解决CSS模块化的一个重要问题：选择器的全局污染问题。
+    按道理，一个模块化的文件应该要隐藏内部作用域，只暴露少量接口给使用者。而按照当前CSS预处理器的方式，导入一个CSS模块后，已存在的样式存在被覆盖的风险。
+    为了避免全局选择器的冲突，需要指定CSS的命名风格，如BEM风格，Boostrap风格。
+
+* 资源的模块化
+    `Webpack`的强大之处不仅仅在于统一了JS的各种模块系统，还有它万能模块加载的理念，将所有的资源模块化。
+
+## 组件化
+
+从UI拆分下来的每个**包含模板（HTML）+样式（CSS）+逻辑（JS）的功能完备的解构单元**就是组件。
+
+> 组件化 != 模块化。模块化是在文件层面上，对代码或者资源的拆分；组件化是在设计层面上，对UI界面进行拆分。
+
+页面上所有的东西都是组件。页面是个大型组件，可以拆成若干个中型组件，然后中型组件还可以再拆，拆成若干个小型组件，小型组件也可以再拆，直到拆成DOM元素为止。DOM元素可以看成是浏览器自身的组件，作为组件的基本单元。
+组件化有如下几点优点：
+    1. 解耦：每个组件都是一个单独的单位，对外只提供接口，避免代码之间的耦合。
+    2. 职责单一： 每个组件只提供单一的功能，可以单独维护扩展。
+    3. 复用性强
+    4. 编译集成： 许多组件合成一个产品，编译后可以很快定位问题。
+
+## 规范化
+
+在项目初期需要制定一系列规范，开发人员遵循规范进行开发，有利于开发的顺利进行。
+
+- 目录结构的制定
+    - 有利于提高项目逻辑合理性
+    - 方便资源统一管理
+    - 对应扩展和合作
+- 编码规范
+    - 遵循编码规范，可以提高代码可读性，便于项目的维护
+- 前后端接口规范
+    - 接口返回数据即显示，前端仅做渲染处理
+    - 渲染逻辑禁止跨多个接口调用
+    - 前端关注交互，渲染。尽量避免业务逻辑处理的出现
+    - 请求响应传输使用JSON，尽量避免JSON的多级嵌套。
+- 响应格式
+- 文档规范
+- git管理规范
+...
+
+## 自动化
+
+前端工程化的许多脏活累活需要交给自动化来实现。
+任何简单机械的重复劳动都需要交给机器去完成。
+- 自动化测试
+- 自动化部署
+- 自动化构建
+...
